# bybit-rs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml  check-formatting.yaml
examples/: http_asset_exchange_records.rs  http_server_time.rs  http_symbols.rs  http_tickers.rs  http_wallet_balances.rs  http_wallet_fund_records.rs  http_wallet_fund_withdraw_records.rs  ws_orderbook.rs  ws_trades.rs
src/: announcement.rs  contract.rs  deserialize.rs  error.rs  filter.rs  lib.rs  order.rs  sign.rs  symbol.rs  ticker.rs  trade.rs  wallet.rs
src/http/: client.rs  error.rs  mod.rs  query.rs  response.rs  sign.rs
src/rest/: announcements.rs  liquidations.rs  mod.rs  orders.rs  server_time.rs  symbols.rs  tickers.rs  wallets.rs
src/ws/: channel.rs  client.rs  error.rs  message.rs  mod.rs  response.rs  sign.rs
