[package]
name = "bybit"
version = "0.0.1"
description = ""
repository = "https://github.com/wassup-/bybit-rs"
authors = ["Tom Knapen"]
edition = "2018"
license = "MIT"

include = [
	"Cargo.toml",
	"LICENSE",
	"src/**/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = ""
tungstenite = "0.14"
serde_json = ""

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = ""
features = ["derive"]

[dependencies.serde_urlencoded]
version = ""

[dependencies.hmac-sha256]
version = "0.1"

[dependencies.hex]
version = "0.4"

[dependencies.chrono]
version = "0.4"

[dependencies.itertools]
version = "0.10"

[dependencies.async-trait]
version = "0.1"

[dependencies.tokio-tungstenite]
version =  "0.15"
features = ["native-tls"]
